examples/valid/init.lama
int x = 7;
int y ;
y = x + 7 ;
print y ;