examples/invalid/redeclared.lama
int a = 0;
a = a + 142 - 14 ;
print a;

int a ;
a = 78;
print a ;